# gcon

./: .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  Noderegistry.py  README.md  README_CHANGES.md  ROADMAP.md  SECURITY.md  Stage16.py  agent.py  agent.py.bak  api_keys.py  api_v1.py  apply_fix.py  artifact_registry.py  audit_log.py  autoscaler.py  benchmark.py  benchmark_report.json  chaos.py  communication.py  coordinator.py  dag.py  dashboard_server.py  event_bus.py  event_types.py  management_layer.py  monitor.py  network.py  node.py  notifications.py  organizations.py  policy.json  policy.py  presentation.py  pyproject.toml  receipt.py  receipt.py.bak  repair_files.py  (+22 more)
.github/workflows/: ci.yml
data/: gcon.db  gcon.db-shm  gcon.db-wal
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  QUICKSTART.md  TRANSPORT_AND_PERSISTENCE.md
examples/: __init__.py  multi_job.py  pytorch_example.py  simple_job.py
keys/: .gitignore  README.md
receipts/: 0dbb8f86c4171c91.json  127f5d9bff68911b.json  136e949c8d0961cb.json  362e0c504a662492.json  4af6537a5111462e.json  5b17c87c70e2d538.json  646e28f7749b63b5.json  8a8601d69a8502fb.json  8cc3aa55637eaa70.json  95c26f394ffa0935.json  9c48b5ff62c6b6ea.json  9da0e49b3b19a729.json  cd692f398b58257c.json  e4e279e2ac9f36f2.json  f6327e48-0940-4c7f-9855-68bd7785473c.json  fc12c06ab50bdf15.json  test-001.json
scripts/: benchmark.py  gcon_agent_daemon.py  gcon_coordinator_grpc.py  generate_dev_certs.py  run_coordinator.py  run_worker.py
sdk/: README.md  pyproject.toml
sdk/gcon_sdk/: __init__.py  client.py
src/gcon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/css/: dashboard.css
static/js/: dashboard.js
storage/node-001/: sample_artifact.txt
templates/: base.html  dashboard.html  index.html  login.html  user.html
templates/cards/: metric_card.html
templates/components/: status_badge.html
templates/layout/: navbar.html  sidebar.html
templates/panels/: activity.html  cluster_health.html  cluster_overview.html  coming_soon.html  critical_alerts.html  execution_timeline.html  jobs.html  node_summary.html  nodes.html  receipt_summary.html  (+2 more)
tests/: __init__.py  test_gcon.py
(+95 files in other folders)
