[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcon"
version = "0.1.0"
description = "Decentralized Verified GPU Compute Network"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GCON Contributors", email = "contact@gcon.network"}
]
keywords = [
    "gpu",
    "compute",
    "distributed",
    "verification",
    "blockchain",
    "ai",
    "ml"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing"
]

dependencies = [
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.990"
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0"
]

[project.urls]
"Homepage" = "https://github.com/Jug-data/GCON"
"Bug Tracker" = "https://github.com/Jug-data/GCON/issues"
"Documentation" = "https://gcon.network/docs"
"Repository" = "https://github.com/Jug-data/GCON.git"

[tool.setuptools]
packages = ["gcon"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=gcon --cov-report=html"
