[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcon-sdk"
version = "1.0.0"
description = "Official Python client for the GCON Public API"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "requests>=2.28.0",
]

[tool.setuptools]
packages = ["gcon_sdk"]
